src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: whitesmoke;
}

code {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
}

.header,
.product-name,
.top-products-header {
  font-family: "Jomolhari", serif;
}

.flex-container-search {
  display: flex;
  justify-content: center;
  margin: 5vh 0;
}

.flex-header {
  display: flex;
  justify-content: center;
}

.paper {
  margin: 0 13vw;
}

.list {
  background-color: whitesmoke;
}

.grid-container {
  display: grid;
  width: 100%;
  grid-template-columns: 40% 40% 20%;
}

.list-header {
  grid-column: 1;
}

.list-price {
  grid-column: 2;
  color: grey;
}

.headerContainer {
  display: flex;
  justify-content: space-between;
  padding: 3vh 3vw;
  width: 100%;
}

.add-to-cart {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 40px;
}

.map-list {
  cursor: pointer;
  line-height: 2;
}

ol li:hover {
  color: black;
  font-weight: 700;
}

.flex-container-space-between {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.searchBar {
  margin: 0 20px;
}

.flex-container-products {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.main {
  width: 75%;
  border-left: 1px solid gray;
}

/* Styling for categorylist: */

.category {
  width: 20%;
}

.categoryList {
  list-style-type: none;
  width: 100%;
  padding-left: 20px;
}

.top-list-item,
.list-item {
  cursor: pointer;
  margin: 10px;
}

.active {
  font-weight: 700;
}

/* Styling for list items: */

.grid-container-product-summary {
  width: 100%;
  display: grid;
  grid-template-columns: 20% 70%;
}

.product-image {
  margin: 0 auto;
  grid-column: 1;
  height: 200px;
  margin-left: 8px;
}

.product-name {
  grid-row: 1;
}

.grid-container-product-details {
  width: 100%;
  display: grid;
  grid-template-columns: 50% 50%;
  margin-left: 150px;
}

.prouduct-origin {
  grid-column: 1;
}

.product-add {
  grid-column: 2;
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}

.product-description {
  grid-row: 2;
  grid-column: 1 / span 2;
}

/* Styling for header: */

.header-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  background-image: url("/background.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  height: 50vh;
}

/* Styling for shopping cart: */

.shopping-cart-list {
  padding: 0;
  list-style-type: none;
}

/* Responsivitet: */
@media only screen and (max-width: 1200px) {
  .paper {
    margin: 0 5vw;
  }
  .flex-container-search {
    flex-direction: column;
    align-items: center;
  }
  .searchBar {
    margin-bottom: 20px;
  }
}

@media only screen and (max-width: 992px) {
  .flex-container-products {
    flex-direction: column;
    align-items: center;
  }
  .paper {
    margin: 0;
  }
  .main {
    border: none;
    width: 90%;
  }
  .categoryList {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 0;
    flex-wrap: wrap;
  }
  .category {
    width: 100%;
    border-bottom: 1px solid gray;
  }
}

@media only screen and (max-width: 768px) {
  .product-image {
    display: none;
  }
}

